#8 Cache quotes & currencies

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,2 @@
-queueTask.pollStation.url=/pollStation
-queueTask.pollStation.stationParamName=station
-cronJob.pollAllStations.url=/pollAllStations
-nsApi.username=chris@oudeman.com
-nsApi.password=UP4ugNZyGuDe8z2kwBTIfJS37MKuhIqG4tgMoUO5bAxJ2X5AlGYybQ
+BloombergQuoteService.cacheRententionHours=6
+YahooCurrencyService.cacheRententionHours=6
